# rusty-01

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md
migrations/2021-03-11-205519_initial_db/: down.sql  up.sql
src/: db_service.rs  main.rs  models.rs  routes.rs  schema.rs
